added document ready waiting

--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<head>
-    <title>👻 pixel__draw</title>
-    <script source="./index.js"></script>
-</head>
-
-<body>
-
-</body>
+<html>
+    <head>
+        <title>👻 pixel__draw</title>
+        <meta charset="UTF-8" />
+        <script src="index.js"></script>
+    </head>
+    
+    <body>
+        <div id="app"></div>
+    </body>
+</html>
